--- a/src/md/pages/P-003_메인.md
+++ b/src/md/pages/P-003_메인.md
@@ -29,24 +29,18 @@
 ### 3.1 레이아웃
 - 상단 공통 헤더
 - 메인 컨텐츠 영역
-- 하단 영역은 MVP에서 생략
 
 ### 3.2 컴포넌트 구성
 - Header
-  - 로고 / 서비스명
-  - 로그인 버튼 또는 사용자 메뉴(로그인 상태에 따라 분기)
-- MainBanner (선택)
-  - 서비스 핵심 메시지
 - ShortcutSection
   - 중고거래 바로가기 카드
   - 경매 바로가기 카드
-- PreviewSection (선택, MVP 단순화 가능)
+- PreviewSection (선택)
   - 최신 중고거래 일부
   - 진행 중 경매 일부
 
 ### 3.3 컴포넌트 실행 환경
-- CSR (Client Side Rendering)
-- 페이지 진입 시 데이터 조회 API 호출 가능
+- CSR
 
 ---
 
@@ -54,15 +48,27 @@
 
 ### 4.1 상태(State)
 - me: { id: number; nickname?: string } | null
+- recentPosts: Array<{
+    id: number
+    title: string
+    price: number
+    categoryName: string
+    thumbnailUrl?: string
+    createDate: string
+  }>
+- openAuctions: Array<{
+    auctionId: number
+    name: string
+    currentHighestBid: number
+    endAt: string
+    status: "OPEN" | "CLOSED" | string
+    thumbnailUrl?: string
+  }>
 - isLoading: boolean
 - errorMessage: string | null
 
 ### 4.2 상태 소유 위치
 - 메인 페이지 로컬 상태
-- 또는 PublicLayout에서 내려받는 사용자 정보
-
-### 4.3 입력값
-- 없음 (조회/이동 중심 페이지)
 
 ---
 
@@ -71,7 +77,7 @@
 ### 5.1 데이터 출처
 - 도메인:
   - 사용자/인증
-  - 중고거래
+  - 중고거래(Posts)
   - 경매
 - 담당자:
   - 사용자·인증 담당
@@ -79,26 +85,22 @@
   - 경매 담당
 
 ### 5.2 사용 API 목록 (MVP 기준)
-- GET /api/auth/me (선택, 로그인 상태 표시용)
-- GET /api/posts?size=N (선택, 최신 중고거래 미리보기)
-- GET /api/auctions?status=OPEN&size=N (선택, 진행 중 경매 미리보기)
-
-※ 실제 사용 여부 및 파라미터는 API 명세서를 따른다.
+- GET /api/v1/posts?page=0 (선택, 최신 중고거래 미리보기)
+- GET /api/auctions?status=OPEN&page=0&size=N (선택, 진행 중 경매 미리보기)
+- 로그인 상태 UI 분기는 PublicLayout 정책을 따른다.
 
 ### 5.3 API 호출 전략
 - 호출 시점:
-  - 페이지 진입 시
+  - 페이지 진입 시(선택)
 - 호출 방식:
-  - credentials: include 사용
+  - credentials: include 사용(로그인 상태 포함 호출을 위해)
 - 성공 처리:
-  - 데이터 수신 후 섹션 렌더링
+  - 수신 후 섹션 렌더링
 - 실패 처리:
   - 미리보기 영역은 숨김 처리
   - 메인 기능 접근에는 영향 없음
 - 실시간 처리:
   - 사용하지 않음
-- 재호출:
-  - 새로고침 시에만 재호출
 
 ---
 
@@ -106,25 +108,6 @@
 
 ### 6.1 접근 권한
 - 접근 유형: Public
-- AUTH_GUARD.md 기준 접근 제한 없음
 
-### 6.2 로그인 상태 분기
-- 로그인 상태:
-  - 헤더에 사용자 메뉴 노출
-  - Protected 페이지 이동 가능
-- 비로그인 상태:
-  - 로그인 / 회원가입 버튼 노출
-  - Protected 페이지 이동 시 로그인 페이지로 이동
-
-### 6.3 에러 처리
+### 6.2 에러 처리
 - API 실패는 메인 페이지 렌더링을 차단하지 않는다.
-- 공통 에러 UI는 사용하지 않는다(미리보기 영역 단위 처리).
-
----
-
-## 7. 완료 조건 체크리스트
-- [ ] 로그인 여부와 관계없이 접근 가능하다
-- [ ] 중고거래/경매 진입 경로가 명확히 노출된다
-- [ ] 로그인 상태에 따라 헤더 UI가 분기된다
-- [ ] 메인 기능 이동은 인증 여부에 따라 올바르게 처리된다
-- [ ] 새로고침 기반으로 상태가 정상 유지된다
