--- a/src/md/pages/P-004_중고거래목록.md
+++ b/src/md/pages/P-004_중고거래목록.md
@@ -2,7 +2,7 @@
 
 ## 0. 목표
 - 사용자가 중고거래 게시글 목록을 조회한다.
-- 카테고리/검색/정렬(최신순)을 통해 원하는 글을 찾는다.
+- 검색/정렬(최신순)을 통해 원하는 글을 찾는다.
 - 게시글을 선택하면 상세 페이지로 이동한다.
 
 ---
@@ -16,7 +16,6 @@
 1. 사용자가 중고거래 목록 페이지에 진입한다.
 2. 목록이 최신순으로 표시된다.
 3. 사용자는 다음 중 하나를 수행한다.
-   - 카테고리 선택(선택)
    - 검색어 입력 후 검색 실행(선택)
    - 정렬 옵션 변경(기본: 최신순)
 4. 조건이 변경되면 목록을 다시 조회한다.
@@ -32,13 +31,12 @@
 - PublicLayout 적용 (L-002_PublicLayout.md 참조)
 - 상단: 헤더(중고거래/경매 네비)
 - 본문:
-  - 상단 필터 바(카테고리/검색/정렬)
+  - 상단 필터 바(검색/정렬)
   - 게시글 리스트(카드)
   - 페이징 또는 더보기(선택)
 
 ### 3.2 컴포넌트 구성
 - FilterBar
-  - CategorySelect (선택)
   - SearchInput
   - SortSelect (기본: 최신순)
   - ApplyButton 또는 Enter 검색
@@ -58,20 +56,19 @@
 
 ### 4.1 상태(State)
 - query:
-  - categoryId: number | null
   - keyword: string
   - sort: "LATEST" | string
   - page: number
-  - size: number
 - posts: Array<{
   id: number
   title: string
   price: number
-  status: string
+  categoryName: string
   thumbnailUrl?: string
-  createdAt: string
+  createDate: string
 }>
 - totalPages?: number | null
+- totalElements?: number | null
 - isLoading: boolean
 - errorMessage: string | null
 
@@ -80,42 +77,36 @@
 
 ### 4.3 입력값
 - keyword (선택)
-- categoryId (선택)
 - sort (선택)
-- page/size (내부)
+- page (내부)
 
 ---
 
 ## 5. API 연동
 
 ### 5.1 데이터 출처
-- 도메인: 일반 중고거래
+- 도메인: 일반 중고거래(Posts)
 - 담당자: 중고거래 담당
 
 ### 5.2 사용 API 목록
-- GET /api/posts
-  - query params 예시:
-    - categoryId
-    - keyword (또는 q)
-    - sort
-    - page
-    - size
+- GET /api/v1/posts
+  - query params:
+    - page (default: 0)
+  - 응답: RsDataPagePostListResponse
+    - data.totalPages, data.totalElements, data.content[]
 
-※ 실제 파라미터/응답 필드는 API 명세서를 따른다.
+※ OpenAPI 상 목록 API는 `page`만 명시되어 있다. 검색/정렬/카테고리 필터는 MVP에서 제외하거나, 백엔드에 추가되면 이 MD를 갱신한다.
 
 ### 5.3 API 호출 전략
 - 최초 호출 시점: 페이지 진입 시
 - 재호출 트리거:
-  - 카테고리 변경
-  - 검색 실행(버튼/Enter)
-  - 정렬 변경
   - 페이지 변경
   - 사용자 수동 새로고침
 - 캐싱 여부: 없음
 - 실시간 방식: 사용하지 않음 (새로고침 기반)
 - 실패 처리:
   - 목록 영역에 ErrorMessage 표시
-  - 기존 목록이 있으면 유지 가능(선택), 기본은 초기화 후 에러 표시
+  - 기본은 posts 초기화 후 에러 표시
 
 ---
 
@@ -126,7 +117,6 @@
 
 ### 6.2 예외 케이스
 - 결과 0건 → EmptyState 노출
-- 과도한 검색어/공백 → 프론트 단 trim 후 요청
 
 ### 6.3 에러 처리
 - API 실패 메시지는 CONTRACT_API.md 규칙에 따라 표시
@@ -136,7 +126,7 @@
 
 ## 7. 완료 조건 체크리스트
 - [ ] 페이지 진입 시 목록이 로드된다
-- [ ] 검색/카테고리/정렬 변경 시 재조회된다
+- [ ] 페이지 변경 시 재조회된다
 - [ ] 게시글 클릭 시 상세로 이동한다
 - [ ] 결과 0건 시 EmptyState가 표시된다
 - [ ] API 실패 시 에러 메시지가 표시된다
