--- a/src/md/pages/P-005_중고거래상세.md
+++ b/src/md/pages/P-005_중고거래상세.md
@@ -44,10 +44,9 @@
   - title
   - price
   - status
-  - createdAt
+  - createDate
 - SellerInfo
   - sellerNickname
-  - sellerReputation(선택)
 - ActionButtons
   - ChatButton
   - EditButton
@@ -69,15 +68,11 @@
     title: string
     content: string
     price: number
-    status: "OPEN" | "RESERVED" | "SOLD" | string
-    images: string[]
-    seller: {
-      id: number
-      nickname: string
-      reputation?: number
-    }
-    createdAt: string
-    updatedAt: string
+    status: string
+    categoryName: string
+    sellerNickname: string
+    imageUrls: string[]
+    createDate: string
   } | null
 - me: { id: number } | null
 - isLoading: boolean
@@ -94,20 +89,22 @@
 ## 5. API 연동
 
 ### 5.1 데이터 출처
-- 도메인: 일반 중고거래
+- 도메인: 일반 중고거래(Posts)
 - 담당자: 중고거래 담당
 
 ### 5.2 사용 API 목록
-- GET /api/posts/{id}
-- DELETE /api/posts/{id} (판매자만)
-- POST /api/chat/rooms (채팅 시작, 선택)
+- GET /api/v1/posts/{id}
+  - 응답: RsDataPostDetailResponse
+- DELETE /api/v1/posts/{id} (판매자만)
+  - 응답: RsDataPostIdResponse
 
-※ 실제 API path/응답은 명세서를 따른다.
+※ 채팅방 생성 API는 별도(채팅 도메인). 상세 페이지에서 “채팅 시작” 시 백엔드 계약에 맞춰 연결한다.
 
 ### 5.3 API 호출 전략
 - 최초 호출 시점: 페이지 진입 시
 - 재호출 트리거:
   - 사용자 수동 새로고침
+  - 삭제 성공 후(리다이렉트)
 - 성공 처리:
   - 데이터 렌더링
 - 실패 처리:
@@ -125,19 +122,12 @@
 - 접근 유형: Public
 
 ### 6.2 권한별 UI 분기
-- 판매자(me.id === post.seller.id):
-  - 수정 / 삭제 버튼 노출
-  - 채팅 버튼 숨김
-- 로그인 사용자(구매자):
-  - 채팅 버튼 노출
-- 비로그인 사용자:
-  - 채팅 버튼 클릭 시 `/login` 이동
+- 판매자: 수정 / 삭제 버튼 노출
+- 로그인 사용자(구매자): 채팅 버튼 노출
+- 비로그인 사용자: 채팅 버튼 클릭 시 `/login` 이동
 
 ### 6.3 게시글 상태별 처리
-- OPEN:
-  - 채팅 가능
-- RESERVED / SOLD:
-  - 채팅 버튼 비활성 또는 숨김(정책 선택)
+- status 값은 서버 문자열을 그대로 표시 (MVP)
 
 ### 6.4 에러 처리
 - API 실패 메시지는 CONTRACT_API.md 규칙에 따라 표시
