--- a/src/md/pages/P-006_중고거래작성.md
+++ b/src/md/pages/P-006_중고거래작성.md
@@ -16,10 +16,10 @@
 1. 사용자가 중고거래 작성 페이지에 진입한다.
 2. 비로그인 사용자는 `/login`으로 이동한다(AUTH_GUARD.md).
 3. 사용자는 글 작성 폼을 입력한다.
-   - 카테고리 선택
-   - 제목 입력
-   - 내용 입력
-   - 가격 입력
+   - 카테고리 선택(필수)
+   - 제목 입력(필수)
+   - 내용 입력(필수)
+   - 가격 입력(선택: 서버 기본값 허용 가능)
    - 이미지 업로드(선택)
 4. 등록 버튼을 클릭한다.
 5. 게시글 생성 API를 호출한다.
@@ -51,8 +51,6 @@
 
 ### 3.3 컴포넌트 실행 환경
 - CSR
-- 페이지 진입 시 별도 데이터 호출은 최소화
-  - 카테고리 목록이 API라면 진입 시 1회 호출(선택)
 
 ---
 
@@ -64,7 +62,7 @@
   - title: string
   - content: string
   - price: number | null
-  - imageUrls: string[] (선택, 업로드 결과)
+  - images: File[] (선택)
 - isSubmitting: boolean
 - errorMessage: string | null
 - fieldErrors: Record<string, string> | null (선택, 400-1 파싱 결과)
@@ -76,7 +74,7 @@
 - categoryId (필수)
 - title (필수)
 - content (필수)
-- price (필수)
+- price (선택, OpenAPI 상 required 아님)
 - images (선택)
 
 ---
@@ -84,27 +82,29 @@
 ## 5. API 연동
 
 ### 5.1 데이터 출처
-- 도메인: 일반 중고거래
+- 도메인: 일반 중고거래(Posts)
 - 담당자: 중고거래 담당
 
 ### 5.2 사용 API 목록 (MVP)
-- POST /api/posts
-- (선택) GET /api/categories
-- (선택) POST /api/images (이미지 업로드가 분리돼 있으면)
-
-※ 실제 API path/필드는 API 명세서를 따른다.
+- POST /api/v1/posts
+  - content-type: multipart/form-data
+  - body(PostCreateRequest):
+    - title (required)
+    - content (required)
+    - categoryId (required)
+    - price (optional, minimum 0)
+    - images (optional, binary[])
 
 ### 5.3 API 호출 전략
-- 최초 호출 시점:
-  - 카테고리 목록이 필요하면 페이지 진입 시 1회 호출
 - 등록 호출:
-  - 등록 버튼 클릭 시 `POST /api/posts`
+  - 등록 버튼 클릭 시 `POST /api/v1/posts`
   - credentials: include 필수 (Protected)
+  - FormData로 전송
 - 성공 처리:
-  - 응답에서 생성된 postId 획득
+  - 응답 RsDataPostIdResponse의 `data.id`를 postId로 사용
   - `/posts/{postId}`로 이동
 - 실패 처리:
-  - 400-1 검증 오류는 fieldErrors로 매핑해 필드 하단에 표시
+  - 400-1 검증 오류는 CONTRACT_API.md 규칙대로 fieldErrors로 매핑해 필드 하단에 표시
   - 그 외 오류는 errorMessage로 상단 표시
 - 실시간 처리:
   - 사용하지 않음 (새로고침 기반)
@@ -120,23 +120,22 @@
 - AUTH_GUARD.md 규칙을 따른다.
 
 ### 6.2 프론트 입력 검증(최소)
-- categoryId: 선택 필수
+- categoryId: 필수
 - title: 빈 값 금지, trim 적용
 - content: 빈 값 금지, trim 적용
-- price: 숫자만, 0 이상 (정책에 따라 1 이상 가능)
+- price(선택): 숫자만, 0 이상
 
 ### 6.3 중복 제출 방지
 - isSubmitting=true 동안 SubmitButton 비활성
 
 ### 6.4 에러 처리
 - API 실패 메시지는 CONTRACT_API.md 규칙에 따라 표시
-- 네트워크 오류 시 공통 에러 UI 사용(ProtectedLayout 레벨)
 
 ---
 
 ## 7. 완료 조건 체크리스트
 - [ ] 비로그인 사용자는 접근 불가(로그인으로 이동)다
-- [ ] 카테고리/제목/내용/가격 입력이 가능하다
+- [ ] 카테고리/제목/내용/가격/이미지 입력이 가능하다
 - [ ] 입력값 최소 검증이 동작한다
 - [ ] 등록 API가 호출된다
 - [ ] 성공 시 상세 페이지로 이동한다
