--- a/src/md/pages/P-008_경매상세.md
+++ b/src/md/pages/P-008_경매상세.md
@@ -1,183 +1,177 @@
-# P-008 경매상세
+# P-008 경매상세 (OpenAPI 기준 수정본)  
 
 ## 0. 목표
-- 사용자가 경매 상품의 상세 정보를 조회한다.
-- 경매 상태·권한·입찰 조건에 따라 가능한 행동을 명확히 분기한다.
-- 실시간 없이도 새로고침으로 정확한 경매 상태를 인지한다.
+
+* 사용자가 경매 상품의 상세 정보를 조회한다.
+* 경매 상태(OPEN/CLOSED)에 맞는 정보만 노출한다.
+* 실시간 없이도 새로고침으로 최신 상태를 다시 조회한다.
 
 ---
 
 ## 1. 라우트
-- /auctions/[id]
+
+* /auctions/[id]
 
 ---
 
 ## 2. 사용자 시나리오
+
 1. 사용자가 경매 상세 페이지에 진입한다.
-2. 경매 기본 정보와 현재 상태가 표시된다.
-3. 사용자는 자신의 권한과 경매 상태에 따라 다음 행동을 수행한다.
-   - 판매자:
-     - 경매 정보 조회만 가능
-     - 경매 수정/삭제는 허용하지 않음(MVP)
-   - 로그인 사용자(구매자):
-     - 입찰
-     - 즉시구매(존재 시)
-   - 비로그인 사용자:
-     - 입찰/즉시구매 시 로그인 페이지로 이동
-4. 경매 종료 이후:
-   - 낙찰자/낙찰가 정보가 표시된다.
-   - 입찰/즉시구매는 불가하다.
-5. 새로고침 시 서버 기준 최신 상태가 반영된다.
+2. 경매 상세 조회 API를 호출한다.
+3. 경매 정보(이름/설명/가격/상태/종료시각/이미지/판매자/카테고리)가 표시된다.
+4. 사용자가 새로고침하면 최신 데이터를 다시 조회한다.
+5. 경매가 CLOSED면 종료 상태 UI로 표시된다.
+
+※ OpenAPI에 **입찰/즉시구매 API가 정의되어 있지 않다.**
+따라서 MVP에서는 입찰/즉시구매 액션을 구현하지 않고 상세 조회만 제공한다.
 
 ---
 
 ## 3. 화면 구성
 
 ### 3.1 레이아웃
-- PublicLayout 적용 (L-002_PublicLayout.md 참조)
-- 상단: 공통 헤더
-- 본문:
-  - 이미지 영역
-  - 경매 정보 영역
-  - 판매자 정보 영역
-  - 입찰/구매 액션 영역
-  - 입찰 내역 영역(선택, MVP 단순화 가능)
+
+* PublicLayout 적용 (L-002_PublicLayout.md 참조)
+* 상단: 공통 헤더
+* 본문:
+
+  * 이미지 영역
+  * 경매 정보 영역
+  * 판매자 정보 영역
+  * 상태 안내 영역(OPEN/CLOSED)
 
 ### 3.2 컴포넌트 구성
-- ImageGallery
-- AuctionInfo
-  - title
-  - startPrice
-  - currentPrice
-  - buyNowPrice(선택)
-  - status
-  - startAt
-  - endAt
-- SellerInfo
-  - sellerNickname
-  - sellerReputation(선택)
-- BidSection
-  - BidInput
-  - BidButton
-  - BuyNowButton(조건부)
-- AuctionResult
-  - winnerNickname
-  - finalPrice
-- ErrorMessage
-- LoadingSkeleton
+
+* ImageGallery (imageUrls)
+* AuctionInfo
+
+  * name
+  * description
+  * startPrice
+  * currentHighestBid
+  * buyNowPrice(있으면 표시)
+  * bidCount
+  * status (OPEN/CLOSED)
+  * startAt
+  * endAt
+  * categoryName
+* SellerInfo
+
+  * seller.nickname
+  * seller.reputationScore
+* StatusBanner
+
+  * OPEN: 진행중 안내
+  * CLOSED: 종료 안내
+* ErrorMessage
+* LoadingSkeleton
 
 ### 3.3 컴포넌트 실행 환경
-- CSR
-- 페이지 진입 시 상세 조회 API 호출
+
+* CSR
+* 페이지 진입 시 상세 조회 API 호출
 
 ---
 
 ## 4. 데이터 모델
 
 ### 4.1 상태(State)
-- auction: {
-    id: number
-    title: string
-    description: string
-    images: string[]
-    status: "OPEN" | "CLOSED" | string
-    startPrice: number
-    currentPrice: number
-    buyNowPrice?: number
-    startAt: string
-    endAt: string
-    seller: {
-      id: number
-      nickname: string
-      reputation?: number
-    }
-    winner?: {
-      id: number
-      nickname: string
-    }
-    finalPrice?: number
+
+* auction: {
+  auctionId: number
+  name: string
+  description: string
+  startPrice: number
+  currentHighestBid: number
+  buyNowPrice?: number
+  bidCount: number
+  status: "OPEN" | "CLOSED" | string
+  startAt: string
+  endAt: string
+  imageUrls: string[]
+  seller: {
+  id: number
+  nickname: string
+  reputationScore: number
+  }
+  categoryName?: string
   } | null
-- me: { id: number } | null
-- bidAmount: number
-- isLoading: boolean
-- errorMessage: string | null
+* isLoading: boolean
+* errorMessage: string | null
 
 ### 4.2 상태 소유 위치
-- 페이지 로컬 상태
+
+* 페이지 로컬 상태
 
 ### 4.3 입력값
-- bidAmount (입찰 시)
+
+* 없음 (조회 중심)
 
 ---
 
 ## 5. API 연동
 
 ### 5.1 데이터 출처
-- 도메인: 경매
-- 담당자: 경매 담당
+
+* 도메인: 경매
+* 담당자: 경매 담당
 
 ### 5.2 사용 API 목록
-- GET /api/auctions/{id}
-- POST /api/auctions/{id}/bids
-- POST /api/auctions/{id}/buy-now (선택)
 
-※ 실제 API path/응답은 API 명세서를 따른다.
+* GET /api/auctions/{auctionId}
 
 ### 5.3 API 호출 전략
-- 최초 호출 시점: 페이지 진입 시
-- 재호출 트리거:
-  - 사용자 수동 새로고침
-  - 입찰/즉시구매 성공 후
-- 성공 처리:
-  - 최신 경매 정보 재조회
-- 실패 처리:
-  - 에러 메시지 표시
-  - 기존 데이터 유지
-- 실시간 처리:
-  - 사용하지 않음
-- 캐싱 여부:
-  - 없음
+
+* 최초 호출 시점:
+
+  * 페이지 진입 시
+* 재호출 트리거:
+
+  * 사용자 수동 새로고침
+* 성공 처리:
+
+  * `RsDataAuctionDetailResponse.data`를 auction으로 매핑 후 렌더링
+* 실패 처리:
+
+  * ErrorMessage 표시
+* 실시간 처리:
+
+  * 사용하지 않음 (새로고침 기반)
+* 캐싱 여부:
+
+  * 없음
 
 ---
 
 ## 6. 권한 / 상태 / 예외 처리
 
 ### 6.1 접근 권한
-- 접근 유형: Public
 
-### 6.2 권한별 UI 분기
-- 판매자(me.id === auction.seller.id):
-  - 입찰/즉시구매 버튼 숨김
-- 로그인 사용자(구매자):
-  - 입찰/즉시구매 버튼 노출(조건부)
-- 비로그인 사용자:
-  - 입찰/즉시구매 시 `/login` 이동
+* 접근 유형: Public
 
-### 6.3 경매 상태별 처리
-- OPEN:
-  - 입찰 가능
-  - 즉시구매가 존재하면 BuyNowButton 노출
-- CLOSED:
-  - 입찰/즉시구매 비활성
-  - 낙찰 결과 표시
+### 6.2 경매 상태별 처리
 
-### 6.4 입찰 검증(프론트 기준)
-- bidAmount는 숫자만 허용
-- bidAmount > currentPrice 조건 검증
-- 서버 검증 실패 메시지는 그대로 노출
+* OPEN:
 
-### 6.5 에러 처리
-- API 실패 메시지는 CONTRACT_API.md 규칙에 따라 표시
-- 입찰 실패 시:
-  - 입력값 유지
-  - 에러 메시지 표시
+  * 진행중 UI 표시
+* CLOSED:
+
+  * 종료 UI 표시
+
+### 6.3 에러 처리
+
+* API 실패 메시지는 CONTRACT_API.md 규칙에 따라 표시
+* 404-1:
+
+  * “존재하지 않는 경매” 안내
+  * 경매 목록(`/auctions`) 이동 버튼 제공
 
 ---
 
 ## 7. 완료 조건 체크리스트
-- [ ] 페이지 진입 시 경매 상세 정보가 로드된다
-- [ ] 경매 상태에 따라 UI가 정확히 분기된다
-- [ ] 판매자는 입찰/구매를 할 수 없다
-- [ ] 로그인 사용자만 입찰/즉시구매가 가능하다
-- [ ] 경매 종료 시 낙찰 결과가 표시된다
-- [ ] 새로고침 시 서버 기준 상태가 반영된다
+
+* [ ] 페이지 진입 시 경매 상세 정보가 로드된다
+* [ ] 이미지/텍스트 정보가 정상 표시된다
+* [ ] status(OPEN/CLOSED)에 따라 안내 UI가 표시된다
+* [ ] 새로고침 시 서버 기준 상태가 반영된다
+* [ ] API 실패 시 에러 메시지가 표시된다
