--- a/src/md/pages/P-009_경매작성.md
+++ b/src/md/pages/P-009_경매작성.md
@@ -1,158 +1,213 @@
-# P-009 경매작성
+# P-009 경매작성 (OpenAPI 기준 수정본)  
 
 ## 0. 목표
-- 로그인 사용자가 경매를 등록한다.
-- 등록 성공 시 경매 상세(`/auctions/[id]`)로 이동한다.
-- 입력값 검증 실패 시 즉시 원인을 인지한다.
-- 경매 비즈니스 룰(입찰가 제한 등)은 서버를 최종 진실로 두고, 프론트는 최소 검증만 한다.
+
+* 로그인 사용자가 경매를 등록한다.
+* 등록 성공 시 경매 상세(`/auctions/[id]`)로 이동한다.
+* 검증 실패 시 서버가 내려준 메시지를 그대로 출력한다.
+* 실시간 기능 없이 새로고침 기반으로 동작한다.
 
 ---
 
 ## 1. 라우트
-- /auctions/write
+
+* /auctions/write
 
 ---
 
 ## 2. 사용자 시나리오
+
 1. 사용자가 경매 작성 페이지에 진입한다.
 2. 비로그인 사용자는 `/login`으로 이동한다(AUTH_GUARD.md).
 3. 사용자는 경매 등록 폼을 입력한다.
-   - 카테고리 선택(선택)
-   - 제목 입력
-   - 설명 입력
-   - 시작가 입력
-   - 즉시구매가 입력(선택)
-   - 종료 시각 입력(또는 기간 선택)
-   - 이미지 업로드(선택)
+
+   * name 입력(필수)
+   * description 입력(필수)
+   * startPrice 입력(필수)
+   * buyNowPrice 입력(선택)
+   * categoryId 입력(필수)
+   * durationHours 입력(필수, 최소 1)
+   * images 업로드(선택)
 4. 등록 버튼을 클릭한다.
-5. 경매 생성 API를 호출한다.
+5. 경매 생성 API를 호출한다(multipart/form-data).
 6. 성공 시:
-   - 생성된 auctionId로 상세(`/auctions/{auctionId}`)로 이동한다.
+
+   * 응답의 `data.auctionId`로 상세(`/auctions/{auctionId}`)로 이동한다.
 7. 실패 시:
-   - 에러 메시지를 표시한다.
-   - 입력값은 유지된다.
-8. 사용자가 새로고침해도 서버 상태 기준으로 동작한다(실시간 없음).
+
+   * 400-1 검증 오류는 가능한 경우 필드별로 표시한다.
+   * 그 외 오류는 상단 에러 메시지로 표시한다.
+   * 입력값은 유지된다.
 
 ---
 
 ## 3. 화면 구성
 
 ### 3.1 레이아웃
-- ProtectedLayout 적용 (L-001_ProtectedLayout.md 참조)
-- 상단: Protected 헤더(로그아웃 포함)
-- 본문: 작성 폼 + 하단 고정 액션 영역(선택)
+
+* ProtectedLayout 적용 (L-001_ProtectedLayout.md 참조)
+* 상단: Protected 헤더(로그아웃 포함)
+* 본문: 작성 폼
 
 ### 3.2 컴포넌트 구성
-- AuctionWriteForm
-  - CategorySelect (선택)
-  - TitleInput
-  - DescriptionTextarea
-  - StartPriceInput
-  - BuyNowPriceInput (선택)
-  - EndAtPicker (또는 DurationSelect)
-  - ImageUploader (선택)
-- FormErrorMessage
-- SubmitButton
-- CancelButton (선택: 목록으로 이동)
+
+* AuctionWriteForm
+
+  * NameInput
+  * DescriptionTextarea
+  * StartPriceInput
+  * BuyNowPriceInput (선택)
+  * CategoryIdInput (또는 Select)
+  * DurationHoursInput (필수)
+  * ImageUploader (선택)
+* FieldErrorMessage
+* FormErrorMessage
+* SubmitButton
+* CancelButton (선택: 목록으로 이동)
 
 ### 3.3 컴포넌트 실행 환경
-- CSR
-- 페이지 진입 시 별도 데이터 호출은 최소화
-  - 카테고리 목록이 API라면 진입 시 1회 호출(선택)
+
+* CSR
+* 페이지 진입 시 필수 데이터 호출 없음 (카테고리 API는 OpenAPI에 없음)
 
 ---
 
 ## 4. 데이터 모델
 
 ### 4.1 상태(State)
-- form:
-  - categoryId: number | null
-  - title: string
-  - description: string
-  - startPrice: number | null
-  - buyNowPrice: number | null
-  - endAt: string | null (ISO8601)
-  - imageUrls: string[] (선택, 업로드 결과)
-- isSubmitting: boolean
-- errorMessage: string | null
-- fieldErrors: Record<string, string> | null (선택, 400-1 파싱 결과)
+
+* form:
+
+  * name: string
+  * description: string
+  * startPrice: number | null
+  * buyNowPrice: number | null
+  * categoryId: number | null
+  * durationHours: number | null
+  * images: File[] (선택)
+* isSubmitting: boolean
+* errorMessage: string | null
+* fieldErrors: Record<string, string> | null
 
 ### 4.2 상태 소유 위치
-- 페이지 로컬 상태 (폼 상태는 form 단일 객체로 관리)
+
+* 페이지 로컬 상태
 
 ### 4.3 입력값
-- title (필수)
-- description (필수)
-- startPrice (필수)
-- endAt (필수)
-- buyNowPrice (선택)
-- categoryId (선택)
-- images (선택)
+
+* name (필수, minLength 1)
+* description (필수, minLength 1)
+* startPrice (필수, 0 이상)
+* categoryId (필수)
+* durationHours (필수, 최소 1)
+* buyNowPrice (선택, 0 이상)
+* images (선택, binary[])
 
 ---
 
 ## 5. API 연동
 
 ### 5.1 데이터 출처
-- 도메인: 경매
-- 담당자: 경매 담당
 
-### 5.2 사용 API 목록 (MVP)
-- POST /api/auctions
-- (선택) GET /api/categories
-- (선택) POST /api/images (이미지 업로드가 분리돼 있으면)
+* 도메인: 경매
+* 담당자: 경매 담당
 
-※ 실제 API path/필드는 API 명세서를 따른다.
+### 5.2 사용 API 목록
+
+* POST /api/auctions (multipart/form-data)
+
+요청 스키마(AuctionCreateRequest):
+
+* name: string (필수)
+* description: string (필수)
+* startPrice: int (필수, minimum 0)
+* buyNowPrice: int (선택, minimum 0)
+* categoryId: int (필수)
+* durationHours: int (선택 스키마이지만, endAt 산정을 위해 프론트에서는 필수 입력으로 취급)
+* images: binary[] (선택)
+
+응답 스키마(RsDataAuctionIdResponse):
+
+* data:
+
+  * auctionId: int
+  * message: string
 
 ### 5.3 API 호출 전략
-- 최초 호출 시점:
-  - 카테고리 목록이 필요하면 페이지 진입 시 1회 호출
-- 등록 호출:
-  - 등록 버튼 클릭 시 `POST /api/auctions`
-  - credentials: include 필수 (Protected)
-- 성공 처리:
-  - 응답에서 생성된 auctionId 획득
-  - `/auctions/{auctionId}`로 이동
-- 실패 처리:
-  - 400-1 검증 오류는 fieldErrors로 매핑해 필드 하단에 표시
-  - 그 외 오류는 errorMessage로 상단 표시
-- 실시간 처리:
-  - 사용하지 않음 (새로고침 기반)
-- 재호출:
-  - 사용자 재시도 시에만
+
+* 호출 시점:
+
+  * 등록 버튼 클릭 시
+* 요청 방식:
+
+  * method: POST
+  * body: FormData
+  * credentials: include (Protected)
+* FormData 구성:
+
+  * name
+  * description
+  * startPrice
+  * buyNowPrice(입력된 경우)
+  * categoryId
+  * durationHours
+  * images(0..N)
+* 성공 처리:
+
+  * `data.auctionId` 획득
+  * `/auctions/{auctionId}`로 이동
+* 실패 처리:
+
+  * 400-1:
+
+    * CONTRACT_API.md 규칙으로 msg 파싱
+    * `fieldErrors[field] = message`로 매핑 후 필드 하단 표시
+  * 그 외:
+
+    * msg를 errorMessage로 표시
+* 중복 제출 방지:
+
+  * isSubmitting=true 동안 SubmitButton 비활성
+* 실시간 처리:
+
+  * 사용하지 않음
+* 재호출:
+
+  * 사용자 재시도 시에만
 
 ---
 
 ## 6. 권한 / 예외 / 에러 처리
 
 ### 6.1 접근 권한
-- 접근 유형: Protected
-- AUTH_GUARD.md 규칙을 따른다.
+
+* 접근 유형: Protected
+* AUTH_GUARD.md 규칙을 따른다.
 
 ### 6.2 프론트 입력 검증(최소)
-- title: 빈 값 금지, trim 적용
-- description: 빈 값 금지, trim 적용
-- startPrice: 숫자만, 0 이상(정책에 따라 1 이상 가능)
-- endAt: 현재 시각 이후 (정확한 판정은 서버가 최종)
-- buyNowPrice(선택):
-  - 숫자만, 0 이상
-  - startPrice보다 낮으면 프론트에서 경고(서버 검증이 최종)
 
-### 6.3 중복 제출 방지
-- isSubmitting=true 동안 SubmitButton 비활성
+* name/description: trim 후 빈 값 금지
+* startPrice: 숫자만, 0 이상
+* categoryId: null 금지
+* durationHours: 숫자만, 1 이상
+* buyNowPrice(선택):
 
-### 6.4 에러 처리
-- API 실패 메시지는 CONTRACT_API.md 규칙에 따라 표시
-- 네트워크 오류 시 공통 에러 UI 사용(ProtectedLayout 레벨)
+  * 숫자만, 0 이상
+  * startPrice보다 낮으면 경고 표시(서버 검증이 최종)
+
+### 6.3 에러 처리
+
+* API 실패 메시지는 CONTRACT_API.md 규칙에 따라 표시
+* 네트워크 오류 시 공통 에러 UI 사용(ProtectedLayout 레벨)
 
 ---
 
 ## 7. 완료 조건 체크리스트
-- [ ] 비로그인 사용자는 접근 불가(로그인으로 이동)다
-- [ ] 제목/설명/시작가/종료시각 입력이 가능하다
-- [ ] 즉시구매가 입력(선택)이 가능하다
-- [ ] 입력값 최소 검증이 동작한다
-- [ ] 등록 API가 호출된다
-- [ ] 성공 시 경매 상세 페이지로 이동한다
-- [ ] 실패 시 에러 메시지 또는 필드 에러가 표시된다
-- [ ] 중복 제출이 방지된다
+
+* [ ] 비로그인 사용자는 접근 불가(로그인으로 이동)다
+* [ ] name/description/startPrice/categoryId/durationHours 입력이 가능하다
+* [ ] buyNowPrice/images 입력(선택)이 가능하다
+* [ ] 등록 API가 multipart/form-data로 호출된다
+* [ ] 성공 시 경매 상세 페이지로 이동한다
+* [ ] 실패 시 에러 메시지 또는 필드 에러가 표시된다
+* [ ] 중복 제출이 방지된다
