--- a/src/md/pages/P-011_마이페이지.md
+++ b/src/md/pages/P-011_마이페이지.md
@@ -1,156 +1,153 @@
-# P-011 마이페이지
+# P-011 마이페이지 (OpenAPI 기준 수정본)  
 
 ## 0. 목표
-- 로그인 사용자가 자신의 프로필/평판(신용도) 정보를 조회한다.
-- 내가 작성한 중고거래 글/경매 목록을 간단히 확인한다.
-- 로그아웃 및 기본 계정 관련 동작의 진입점을 제공한다.
+
+* 로그인 사용자가 자신의 프로필 정보를 조회한다.
+* 사용자 점수(score)를 함께 표시한다.
+* 로그아웃/계정 관련 진입점은 ProtectedLayout 헤더를 통해 제공한다.
+* 실시간 기능 없이 새로고침 기반으로 동작한다.
 
 ---
 
 ## 1. 라우트
-- /mypage
+
+* /mypage
 
 ---
 
 ## 2. 사용자 시나리오
+
 1. 사용자가 마이페이지에 진입한다.
 2. 비로그인 사용자는 `/login`으로 이동한다(AUTH_GUARD.md).
-3. 사용자 프로필 정보가 표시된다.
-4. 사용자 평판(점수)이 표시된다(존재 시).
-5. 사용자는 탭 또는 섹션에서 다음 정보를 확인한다.
-   - 내가 올린 중고거래 글 목록(요약)
-   - 내가 올린 경매 목록(요약)
-6. 목록 아이템 클릭 시 각각의 상세 페이지로 이동한다.
-7. 새로고침 시 최신 데이터가 반영된다.
+3. 내 정보 조회 API를 호출한다.
+4. 사용자 프로필(username/name)과 점수(score)가 표시된다.
+5. 사용자가 새로고침하면 최신 데이터를 다시 조회한다.
+
+※ “내가 작성한 중고거래 글/경매 목록” API가 OpenAPI에 없다.
+따라서 MVP에서는 목록 섹션을 제거한다(추후 API 추가 시 복구).
 
 ---
 
 ## 3. 화면 구성
 
 ### 3.1 레이아웃
-- ProtectedLayout 적용 (L-001_ProtectedLayout.md 참조)
-- 상단: Protected 헤더(로그아웃 포함)
-- 본문:
-  - 프로필 카드
-  - 평판 카드(또는 프로필 내 표시)
-  - 내 활동 섹션(중고/경매)
+
+* ProtectedLayout 적용 (L-001_ProtectedLayout.md 참조)
+* 상단: Protected 헤더(로그아웃 포함)
+* 본문:
+
+  * 프로필 카드
+  * 점수 카드(또는 프로필 카드 내부)
 
 ### 3.2 컴포넌트 구성
-- ProfileCard
-  - nickname
-  - email(선택, 정책에 따라 숨김 가능)
-  - createdAt(선택)
-- ReputationCard
-  - score (예: 0.0 ~ 5.0)
-- MyActivityTabs (또는 Section)
-  - MyPostsPreviewList
-  - MyAuctionsPreviewList
-- ListItemCard
-- EmptyState
-- ErrorMessage
-- LoadingSkeleton
+
+* ProfileCard
+
+  * username
+  * name
+  * createDate (선택)
+* ScoreCard
+
+  * score (number)
+* ErrorMessage
+* LoadingSkeleton
 
 ### 3.3 컴포넌트 실행 환경
-- CSR
-- 페이지 진입 시 마이 데이터 조회 API 호출
+
+* CSR
+* 페이지 진입 시 내 정보 조회 API 호출
 
 ---
 
 ## 4. 데이터 모델
 
 ### 4.1 상태(State)
-- me: {
-    id: number
-    email?: string
-    nickname: string
-    createdAt?: string
+
+* me: {
+  id: number
+  username: string
+  name: string
+  score: number
+  createDate: string
+  modifyDate: string
   } | null
-- reputation: {
-    score: number
-  } | null
-- myPosts: Array<{
-    id: number
-    title: string
-    price: number
-    status: string
-    thumbnailUrl?: string
-    createdAt: string
-  }>
-- myAuctions: Array<{
-    id: number
-    title: string
-    currentPrice: number
-    status: string
-    endAt: string
-    thumbnailUrl?: string
-  }>
-- isLoading: boolean
-- errorMessage: string | null
-- activeTab: "POSTS" | "AUCTIONS"
+* isLoading: boolean
+* errorMessage: string | null
 
 ### 4.2 상태 소유 위치
-- 페이지 로컬 상태
-- 인증 상태/로그아웃은 ProtectedLayout 책임
+
+* 페이지 로컬 상태
+* 인증 상태/로그아웃은 ProtectedLayout 책임
 
 ### 4.3 입력값
-- 없음 (조회/이동 중심)
+
+* 없음 (조회 중심)
 
 ---
 
 ## 5. API 연동
 
 ### 5.1 데이터 출처
-- 도메인: 사용자/평판 + 중고거래 + 경매
-- 담당자:
-  - 사용자·인증 담당
-  - 중고거래 담당
-  - 경매 담당
 
-### 5.2 사용 API 목록 (MVP 기준)
-- GET /api/auth/me (필수, 사용자 정보)
-- GET /api/reputations/me (선택, 평판 점수)
-- GET /api/posts?mine=true&size=N (선택, 내 글 요약)
-- GET /api/auctions?mine=true&size=N (선택, 내 경매 요약)
+* 도메인: 사용자/인증
 
-※ 실제 path/파라미터/응답 필드는 API 명세서를 따른다.
+### 5.2 사용 API 목록
+
+* GET /api/v1/members/me
+
+※ OpenAPI 상 이 엔드포인트는 `MemberWithUsernameDto`를 직접 반환한다(RsData 래핑이 아님).
+따라서 이 페이지는 RsData 파싱이 아니라 DTO 직접 파싱을 한다.
 
 ### 5.3 API 호출 전략
-- 최초 호출 시점: 페이지 진입 시
-- 호출 방식:
-  - credentials: include 필수
-- 성공 처리:
-  - 각 섹션 데이터 렌더링
-- 실패 처리:
-  - 프로필 조회 실패: 페이지 전체 ErrorMessage (핵심 데이터)
-  - 평판/내목록 실패: 해당 섹션만 ErrorMessage 또는 섹션 숨김
-- 실시간 처리: 사용하지 않음 (새로고침 기반)
-- 재호출 트리거:
-  - 사용자 수동 새로고침
-  - 탭 전환 시(탭별 API를 분리한 경우에만)
+
+* 최초 호출 시점:
+
+  * 페이지 진입 시 1회 호출
+* 요청 방식:
+
+  * method: GET
+  * credentials: include (Protected)
+* 성공 처리:
+
+  * 응답 DTO를 me로 저장 후 렌더링
+* 실패 처리:
+
+  * errorMessage 표시
+  * AUTH 실패로 판단되면 `/login` 이동(ProtectedLayout/AuthGate 정책에 따른다)
+* 실시간 처리:
+
+  * 사용하지 않음 (새로고침 기반)
+* 재호출:
+
+  * 새로고침 시에만
 
 ---
 
 ## 6. 권한 / 예외 / 에러 처리
 
 ### 6.1 접근 권한
-- 접근 유형: Protected
-- AUTH_GUARD.md 규칙을 따른다.
+
+* 접근 유형: Protected
+* AUTH_GUARD.md 규칙을 따른다.
 
 ### 6.2 예외 케이스
-- 내 글/내 경매 0건 → EmptyState 표시
-- reputation 데이터 없음 → ReputationCard 숨김 또는 기본값 표시(정책 선택)
+
+* score가 0 또는 null로 내려오는 경우:
+
+  * 0은 그대로 표시
+  * null은 “-”로 표시(정책 고정)
 
 ### 6.3 에러 처리
-- API 실패 메시지는 CONTRACT_API.md 규칙에 따라 표시
-- 네트워크 오류 시 공통 에러 UI 사용(ProtectedLayout 레벨)
+
+* 네트워크 오류 시 공통 에러 UI 사용(ProtectedLayout 레벨)
+* 기타 오류는 errorMessage에 표시
 
 ---
 
 ## 7. 완료 조건 체크리스트
-- [ ] 비로그인 사용자는 접근 불가(로그인으로 이동)다
-- [ ] 내 프로필 정보가 표시된다
-- [ ] 평판 점수가 표시되거나(있으면) 없을 때도 UI가 깨지지 않는다
-- [ ] 내 중고거래/경매 요약 리스트가 표시된다
-- [ ] 아이템 클릭 시 해당 상세로 이동한다
-- [ ] 새로고침 시 최신 데이터가 반영된다
-- [ ] 일부 섹션 실패가 전체를 막지 않는다(프로필 제외)
+
+* [ ] 비로그인 사용자는 접근 불가(로그인으로 이동)다
+* [ ] 페이지 진입 시 내 정보가 로드된다
+* [ ] username/name/score가 표시된다
+* [ ] 새로고침 시 최신 데이터가 반영된다
+* [ ] API 실패 시 에러 메시지가 표시된다
