--- a/src/md/pages/P-001_로그인.md
+++ b/src/md/pages/P-001_로그인.md
@@ -1,119 +1,161 @@
-# P-001 로그인
+# P-001 로그인 (OpenAPI 기준 수정본)
 
 ## 0. 목표
-- 사용자가 이메일과 비밀번호로 로그인한다.
-- 로그인 성공 시 인증 쿠키가 발급된 상태로 메인 페이지로 이동한다.
-- 로그인 실패 시 원인을 명확한 메시지로 인지한다.
+
+* 사용자가 아이디(username)와 비밀번호로 로그인한다.
+* 로그인 성공 시 서버 인증 상태가 성립된 것으로 간주하고 메인 페이지로 이동한다.
+* 로그인 실패 시 서버가 내려준 메시지를 그대로 인지한다.
 
 ---
 
 ## 1. 라우트
-- /login
+
+* /login
 
 ---
 
 ## 2. 사용자 시나리오
+
 1. 사용자가 로그인 페이지에 진입한다.
-2. 이메일, 비밀번호 입력 필드가 표시된다.
-3. 사용자가 이메일과 비밀번호를 입력한다.
+2. username, password 입력 필드가 표시된다.
+3. 사용자가 아이디와 비밀번호를 입력한다.
 4. 로그인 버튼을 클릭한다.
 5. 로그인 API를 호출한다.
 6. 성공 시:
-   - 인증 쿠키가 설정된다.
-   - 메인 페이지(`/`)로 이동한다.
+
+   * 로그인 성공 응답을 수신한다.
+   * 메인 페이지(`/`)로 이동한다.
 7. 실패 시:
-   - 에러 메시지를 화면에 표시한다.
-   - 입력값은 유지된다.
+
+   * 서버 응답 메시지를 화면에 표시한다.
+   * 입력값은 유지된다.
 
 ---
 
 ## 3. 화면 구성
 
 ### 3.1 레이아웃
-- 중앙 정렬 단일 컬럼 레이아웃
-- 상단: 서비스 로고 또는 타이틀
-- 중앙: 로그인 폼
-- 하단: 회원가입 페이지 이동 링크
+
+* PublicLayout 적용 (L-002_PublicLayout.md 참조)
+* 중앙 정렬 단일 컬럼
+* 상단: 서비스 로고 또는 타이틀
+* 중앙: 로그인 폼
+* 하단: 회원가입 페이지 이동 링크
 
 ### 3.2 컴포넌트 구성
-- LoginForm
-  - EmailInput
-  - PasswordInput
-  - SubmitButton
-- ErrorMessage
-- SignupLink
+
+* LoginForm
+
+  * UsernameInput
+  * PasswordInput
+  * SubmitButton
+* ErrorMessage
+* SignupLink
 
 ### 3.3 컴포넌트 실행 환경
-- CSR (Client Side Rendering)
-- 페이지 진입 시 별도 API 호출 없음
+
+* CSR
+* 페이지 진입 시 별도 API 호출 없음
 
 ---
 
 ## 4. 데이터 모델
 
 ### 4.1 상태(State)
-- email: string
-- password: string
-- isLoading: boolean
-- errorMessage: string | null
+
+* username: string
+* password: string
+* isLoading: boolean
+* errorMessage: string | null
 
 ### 4.2 상태 소유 위치
-- Login 페이지 컴포넌트 내부 로컬 상태
+
+* 로그인 페이지 컴포넌트 로컬 상태
 
 ### 4.3 입력값
-- email (필수)
-- password (필수)
+
+* username (필수)
+* password (필수)
 
 ---
 
 ## 5. API 연동
 
 ### 5.1 데이터 출처
-- 도메인: 사용자 / 인증
-- 담당자: 사용자·인증 담당
+
+* 도메인: 사용자 / 인증
+* 담당자: 사용자·인증 담당
 
 ### 5.2 사용 API 목록
-- POST /api/auth/login
+
+* POST /api/v1/members/login
 
 ### 5.3 API 호출 전략
-- 호출 시점: 로그인 버튼 클릭 시
-- 호출 방식:
-  - fetch 또는 axios 사용
-  - credentials: include 필수
-- 성공 처리:
-  - 응답 성공 판정은 CONTRACT_API.md 기준
-  - 별도 토큰 저장 없음 (쿠키 기반)
-  - 메인 페이지로 강제 이동
-- 실패 처리:
-  - resultCode 기준으로 실패 판정
-  - 400-1 검증 오류 시 message 파싱 후 출력
-  - 그 외 오류는 공통 에러 메시지 출력
-- 실시간 처리: 사용하지 않음
-- 재호출: 사용자 재시도 시에만 호출
+
+* 호출 시점:
+
+  * 로그인 버튼 클릭 시
+* 요청 방식:
+
+  * method: POST
+  * headers: `Content-Type: application/json`
+  * credentials: include
+* 요청 body:
+
+```json
+{
+  "username": "string",
+  "password": "string"
+}
+```
+
+* 성공 처리:
+
+  * HTTP 2xx + resultCode `200-*`
+  * 로그인 성공으로 간주
+  * 메인 페이지(`/`)로 이동
+* 실패 처리:
+
+  * HTTP 4xx / 5xx
+  * msg 필드를 errorMessage로 표시
+  * 400-1 검증 오류 시 msg 전체 출력
+* 실시간 처리:
+
+  * 사용하지 않음
+* 재호출:
+
+  * 사용자 재시도 시에만
+
+※ 응답에는 apiKey, accessToken이 포함되지만
+MVP 프론트엔드는 **별도 저장/처리하지 않고 서버 인증 상태만 신뢰**한다.
 
 ---
 
 ## 6. 권한 / 예외 / 에러 처리
 
 ### 6.1 접근 권한
-- 비로그인 사용자만 접근 가능
-- 이미 로그인된 사용자는 메인 페이지로 리다이렉트
 
-### 6.2 예외 케이스
-- 이메일 미입력 → 프론트 단 검증 에러 표시
-- 비밀번호 미입력 → 프론트 단 검증 에러 표시
+* 접근 유형: Guest Only
+* 로그인 상태 접근 시 메인 페이지(`/`)로 리다이렉트
+* AUTH_GUARD.md 규칙을 따른다.
+
+### 6.2 프론트 입력 검증(최소)
+
+* username: 빈 값 금지, trim 적용
+* password: 빈 값 금지
 
 ### 6.3 에러 처리
-- API 실패 메시지는 CONTRACT_API.md 규칙에 따라 표시
-- 네트워크 오류 시 공통 에러 UI 사용
+
+* API 실패 메시지는 CONTRACT_API.md 규칙에 따라 표시
+* 네트워크 오류 시 공통 에러 메시지 표시
 
 ---
 
 ## 7. 완료 조건 체크리스트
-- [ ] 이메일/비밀번호 입력 필드가 존재한다
-- [ ] 입력값 검증이 동작한다
-- [ ] 로그인 API가 호출된다
-- [ ] 성공 시 쿠키 기반 로그인 상태가 유지된다
-- [ ] 성공 시 메인 페이지로 이동한다
-- [ ] 실패 시 에러 메시지가 노출된다
-- [ ] 새로고침 후에도 로그인 상태가 유지된다
+
+* [ ] username / password 입력 필드가 존재한다
+* [ ] 입력값 최소 검증이 동작한다
+* [ ] 로그인 API가 호출된다
+* [ ] 성공 시 메인 페이지로 이동한다
+* [ ] 실패 시 서버 메시지가 노출된다
+* [ ] 새로고침 후에도 서버 기준 로그인 상태로 판단된다
