--- a/src/md/pages/P-007_경매목록.md
+++ b/src/md/pages/P-007_경매목록.md
@@ -1,148 +1,203 @@
-# P-007 경매목록
+# P-007 경매목록 (OpenAPI 기준 수정본)  
 
 ## 0. 목표
-- 사용자가 진행 중인 경매 목록을 조회한다.
-- 검색/정렬로 원하는 경매를 찾는다.
-- 경매를 선택하면 상세 페이지로 이동한다.
+
+* 사용자가 경매 목록을 조회한다.
+* status/category/sort/page/size 조건으로 목록을 탐색한다.
+* 경매를 선택하면 상세(`/auctions/[id]`)로 이동한다.
+* 로그인 사용자는 “경매 등록”으로 작성 페이지(`/auctions/write`)로 이동한다.
 
 ---
 
 ## 1. 라우트
-- /auctions
+
+* /auctions
 
 ---
 
 ## 2. 사용자 시나리오
+
 1. 사용자가 경매 목록 페이지에 진입한다.
-2. 기본적으로 진행 중(OPEN) 경매가 최신순으로 표시된다.
-3. 사용자는 다음 중 하나를 수행한다.
-   - 검색어 입력 후 검색 실행(선택)
-   - 정렬 옵션 변경(기본: 최신순)
-   - 상태 필터 변경(기본: OPEN, MVP에서 고정 가능)
-4. 조건이 변경되면 목록을 다시 조회한다.
+2. 목록 조회 API를 호출한다.
+3. 경매 카드 리스트가 표시된다.
+4. 사용자가 필터/정렬/페이지를 변경하면 목록을 다시 조회한다.
 5. 사용자가 특정 경매 카드를 클릭하면 상세(`/auctions/[id]`)로 이동한다.
-6. 로그인 사용자는 “경매 등록” 버튼으로 작성 페이지(`/auctions/write`)로 이동할 수 있다.
-   - 비로그인 사용자가 클릭하면 `/login`으로 이동한다(AUTH_GUARD.md)
+6. 사용자가 “경매 등록” 버튼을 클릭한다.
+
+   * 로그인 사용자: 작성 페이지(`/auctions/write`)로 이동
+   * 비로그인 사용자: `/login`으로 이동(AUTH_GUARD.md)
 
 ---
 
 ## 3. 화면 구성
 
 ### 3.1 레이아웃
-- PublicLayout 적용 (L-002_PublicLayout.md 참조)
-- 상단: 헤더(중고거래/경매 네비)
-- 본문:
-  - 상단 필터 바(검색/정렬/상태)
-  - 경매 리스트(카드)
-  - 페이징 또는 더보기(선택)
+
+* PublicLayout 적용 (L-002_PublicLayout.md 참조)
+* 상단: 헤더(중고거래/경매 네비)
+* 본문:
+
+  * 상단 필터 바(status/category/sort)
+  * 경매 리스트(카드)
+  * 페이지네이션
 
 ### 3.2 컴포넌트 구성
-- FilterBar
-  - StatusTabs (기본: OPEN, MVP에서 OPEN만 노출 가능)
-  - SearchInput
-  - SortSelect (기본: 최신순)
-- AuctionList
-  - AuctionCard[]
-- WriteButton
-- EmptyState
-- ErrorMessage
 
-경매 카드 표시 최소 정보:
-- title
-- currentPrice (또는 lastBidPrice)
-- endAt
-- thumbnailUrl(선택)
-- 상태(OPEN/CLOSED)
+* FilterBar
+
+  * StatusSelect 또는 Tabs (OPEN/CLOSED)
+  * CategoryInput (문자열, 선택)
+  * SortSelect (문자열, 선택)
+* AuctionList
+
+  * AuctionCard[]
+* WriteButton
+* Pagination
+* EmptyState
+* ErrorMessage
+* LoadingSkeleton
+
+경매 카드 표시 최소 정보(OpenAPI 기준):
+
+* name
+* currentHighestBid (없으면 startPrice로 대체 표시 가능)
+* endAt
+* status (OPEN/CLOSED)
+* thumbnailUrl(선택)
+* bidCount(선택)
+* seller.nickname(선택)
+* categoryName(선택)
 
 ### 3.3 컴포넌트 실행 환경
-- CSR
-- 페이지 진입 시 목록 조회 API 호출
+
+* CSR
+* 페이지 진입 시 목록 조회 API 호출
 
 ---
 
 ## 4. 데이터 모델
 
 ### 4.1 상태(State)
-- query:
-  - status: "OPEN" | "CLOSED" | string
-  - keyword: string
-  - sort: "LATEST" | string
-  - page: number
-  - size: number
-- auctions: Array<{
-  id: number
-  title: string
-  currentPrice: number
-  endAt: string
-  status: string
+
+* query:
+
+  * status: "OPEN" | "CLOSED" | string
+  * category: string
+  * sort: string
+  * page: number
+  * size: number
+* auctions: Array<{
+  auctionId: number
+  name: string
   thumbnailUrl?: string
-}>
-- totalPages?: number | null
-- isLoading: boolean
-- errorMessage: string | null
+  startPrice: number
+  currentHighestBid: number
+  buyNowPrice?: number
+  status: "OPEN" | "CLOSED" | string
+  endAt: string
+  bidCount: number
+  seller?: {
+  id: number
+  nickname: string
+  reputationScore: number
+  }
+  categoryName?: string
+  }>
+* pageData: {
+  page: number
+  size: number
+  totalElements: number
+  totalPages: number
+  } | null
+* isLoading: boolean
+* errorMessage: string | null
 
 ### 4.2 상태 소유 위치
-- 페이지 로컬 상태
+
+* 페이지 로컬 상태
 
 ### 4.3 입력값
-- keyword (선택)
-- status (기본: OPEN)
-- sort/page/size (내부)
+
+* status/category/sort/page/size
 
 ---
 
 ## 5. API 연동
 
 ### 5.1 데이터 출처
-- 도메인: 경매
-- 담당자: 경매 담당
+
+* 도메인: 경매
+* 담당자: 경매 담당
 
 ### 5.2 사용 API 목록
-- GET /api/auctions
-  - query params 예시:
-    - status=OPEN
-    - keyword (또는 q)
-    - sort
-    - page
-    - size
 
-※ 실제 파라미터/응답 필드는 API 명세서를 따른다.
+* GET /api/auctions
+
+  * query params:
+
+    * page (기본 0)
+    * size (기본 20)
+    * sort (선택, 문자열)
+    * category (선택, 문자열)
+    * status (선택, 문자열)
+
+※ OpenAPI에는 keyword/q 검색 파라미터가 없다. (검색 입력은 제거)
 
 ### 5.3 API 호출 전략
-- 최초 호출 시점: 페이지 진입 시
-- 재호출 트리거:
-  - 상태 변경(사용 시)
-  - 검색 실행
-  - 정렬 변경
-  - 페이지 변경
-  - 사용자 수동 새로고침
-- 캐싱 여부: 없음
-- 실시간 방식: 사용하지 않음 (새로고침 기반)
-- 실패 처리:
-  - 목록 영역에 ErrorMessage 표시
+
+* 최초 호출 시점:
+
+  * 페이지 진입 시 `page=0&size=20`
+  * status는 기본 `OPEN`으로 설정(페이지 초기값)
+* 재호출 트리거:
+
+  * status 변경
+  * category 변경
+  * sort 변경
+  * page/size 변경
+  * 사용자 수동 새로고침
+* 성공 처리:
+
+  * `RsDataAuctionPageResponse.data.content`를 auctions로 매핑
+  * `data.totalPages`, `data.page` 등으로 Pagination 렌더링
+* 실패 처리:
+
+  * 목록 영역에 ErrorMessage 표시
+  * auctions 초기화
+* 실시간 처리:
+
+  * 사용하지 않음 (새로고침 기반)
+* 캐싱 여부:
+
+  * 없음
 
 ---
 
 ## 6. 권한 / 예외 / 에러 처리
 
 ### 6.1 접근 권한
-- 접근 유형: Public
+
+* 접근 유형: Public
 
 ### 6.2 예외 케이스
-- 결과 0건 → EmptyState 노출
-- endAt이 지난데 OPEN으로 남아있으면:
-  - 프론트는 서버 status를 신뢰하고 그대로 표시 (MVP)
+
+* 결과 0건 → EmptyState 표시
+* endAt이 지났는데 status가 OPEN이면:
+
+  * 서버 status를 그대로 표시한다.
 
 ### 6.3 에러 처리
-- API 실패 메시지는 CONTRACT_API.md 규칙에 따라 표시
-- 네트워크 오류 시 목록 영역 단위 에러 처리
+
+* API 실패 메시지는 CONTRACT_API.md 규칙에 따라 표시
+* 네트워크 오류 시 목록 영역 단위 에러 처리
 
 ---
 
 ## 7. 완료 조건 체크리스트
-- [ ] 페이지 진입 시 경매 목록이 로드된다
-- [ ] 검색/정렬/상태 변경 시 재조회된다
-- [ ] 경매 클릭 시 상세로 이동한다
-- [ ] 결과 0건 시 EmptyState가 표시된다
-- [ ] API 실패 시 에러 메시지가 표시된다
-- [ ] 새로고침 기반으로 최신 상태를 다시 가져온다
+
+* [ ] 페이지 진입 시 경매 목록이 로드된다
+* [ ] status/category/sort/page/size 변경 시 재조회된다
+* [ ] 경매 클릭 시 상세로 이동한다
+* [ ] 결과 0건 시 EmptyState가 표시된다
+* [ ] API 실패 시 에러 메시지가 표시된다
+* [ ] 새로고침 기반으로 최신 상태를 다시 가져온다
