--- a/src/md/pages/P-010_채팅.md
+++ b/src/md/pages/P-010_채팅.md
@@ -1,161 +1,240 @@
-# P-010 채팅
+# P-010 채팅 (OpenAPI 기준 수정본)  
 
 ## 0. 목표
-- 로그인 사용자가 거래/경매 단위 1:1 채팅방 목록을 조회한다.
-- 채팅방에 들어가 메시지 목록을 조회하고 메시지를 전송한다.
-- 실시간 없이도 새로고침/재조회로 대화가 이어지도록 한다.
+
+* 로그인 사용자가 채팅 목록을 조회한다.
+* 특정 roomId를 선택해 메시지 목록을 조회한다.
+* 메시지를 전송한다.
+* 실시간 없이도 새로고침/재조회로 대화가 이어지게 한다.
 
 ---
 
 ## 1. 라우트
-- /chat
-- (선택) /chat/[roomId]  ← 라우트 분리할 경우
 
-※ MVP에서는 `/chat` 한 페이지에서 “방 목록 + 선택된 방 메시지”를 동시에 구성 가능
+* /chat
+* (선택) /chat/[roomId]  ← 라우트 분리할 경우
+
+※ MVP에서는 `/chat` 한 페이지에서 “목록 + 선택된 방 메시지”를 동시에 구성한다.
 
 ---
 
 ## 2. 사용자 시나리오
+
 1. 사용자가 채팅 페이지에 진입한다.
 2. 비로그인 사용자는 `/login`으로 이동한다(AUTH_GUARD.md).
-3. 채팅방 목록이 표시된다.
-4. 사용자가 특정 채팅방을 선택한다.
-5. 해당 채팅방의 메시지 목록이 표시된다.
-6. 사용자가 메시지를 입력하고 전송한다.
-7. 전송 성공 시 메시지 목록을 재조회하거나(권장) 로컬에 즉시 반영 후 새로고침으로 동기화한다.
-8. 사용자가 새로고침하면 최신 메시지가 다시 로드된다.
+3. 채팅 목록 API를 호출한다.
+4. 목록에서 특정 roomId를 선택한다.
+5. 메시지 조회 API를 호출한다.
+6. 메시지 목록이 표시된다.
+7. 사용자가 메시지를 입력하고 전송 버튼을 클릭한다.
+8. 전송 API를 호출한다.
+9. 전송 성공 시:
+
+   * 메시지 목록을 다시 조회한다(권장).
+10. 사용자가 새로고침하면 목록/메시지가 최신으로 다시 로드된다.
 
 ---
 
 ## 3. 화면 구성
 
 ### 3.1 레이아웃
-- ProtectedLayout 적용 (L-001_ProtectedLayout.md 참조)
-- 본문 2열 레이아웃(데스크톱 기준)
-  - 좌측: 채팅방 목록 패널
-  - 우측: 선택된 채팅방의 메시지 패널
-- 모바일 대응은 MVP에서 단일 컬럼(목록 → 방 진입)로 단순화 가능
+
+* ProtectedLayout 적용 (L-001_ProtectedLayout.md 참조)
+* 본문 2열 레이아웃(데스크톱 기준)
+
+  * 좌측: 채팅 목록 패널
+  * 우측: 선택된 roomId의 메시지 패널
 
 ### 3.2 컴포넌트 구성
-- ChatRoomListPanel
-  - RoomListItem[]
-  - EmptyState
-- ChatMessagePanel
-  - RoomHeader (상대 닉네임 / 거래 타입 / 상태)
-  - MessageList
-    - MessageBubble[]
-  - MessageComposer
-    - MessageInput
-    - SendButton
-  - RefreshButton (선택: 수동 새로고침)
-- ErrorMessage
-- LoadingSkeleton
+
+* ChatRoomListPanel
+
+  * RoomListItem[] (roomId 단위로 묶어서 표시)
+  * EmptyState
+* ChatMessagePanel
+
+  * RoomHeader (roomId / itemId / 상대 정보는 가능한 범위에서 표시)
+  * MessageList
+
+    * MessageBubble[]
+  * MessageComposer
+
+    * MessageInput
+    * SendButton
+  * RefreshButton (선택)
+* ErrorMessage
+* LoadingSkeleton
 
 ### 3.3 컴포넌트 실행 환경
-- CSR
-- 페이지 진입 시 채팅방 목록 조회
-- 방 선택 시 메시지 목록 조회
+
+* CSR
+* 페이지 진입 시 목록 조회
+* roomId 선택 시 메시지 조회
 
 ---
 
 ## 4. 데이터 모델
 
 ### 4.1 상태(State)
-- rooms: Array<{
-    id: number | string
-    type: "POST" | "AUCTION" | string
-    targetId: number
-    opponentNickname: string
-    lastMessage?: string
-    lastMessageAt?: string
-    unreadCount?: number
+
+* chatListRaw: Array<{
+  id?: number
+  itemId: number
+  roomId: string
+  sender: string
+  message: string
+  createDate: string
+  isRead: boolean
   }>
-- selectedRoomId: number | string | null
-- messages: Array<{
-    id: number | string
-    roomId: number | string
-    senderId: number
-    senderNickname?: string
-    content: string
-    createdAt: string
+* rooms: Array<{
+  roomId: string
+  itemId: number
+  lastMessage?: string
+  lastMessageAt?: string
+  unreadCount?: number
   }>
-- messageText: string
-- isRoomsLoading: boolean
-- isMessagesLoading: boolean
-- isSending: boolean
-- errorMessage: string | null
+
+  * chatListRaw를 roomId로 그룹핑해 파생 생성한다.
+  * unreadCount는 isRead=false 개수로 계산(정책: readerName 기반 정밀 계산은 서버 지원 필요)
+* selectedRoomId: string | null
+* messages: Array<{
+  id?: number
+  itemId: number
+  roomId: string
+  sender: string
+  message: string
+  createDate: string
+  isRead: boolean
+  }>
+* messageText: string
+* isRoomsLoading: boolean
+* isMessagesLoading: boolean
+* isSending: boolean
+* errorMessage: string | null
 
 ### 4.2 상태 소유 위치
-- 페이지 로컬 상태
-- 인증 상태/로그아웃은 ProtectedLayout 책임
+
+* 페이지 로컬 상태
+* 인증 상태/로그아웃은 ProtectedLayout 책임
 
 ### 4.3 입력값
-- messageText (필수, 전송 시)
+
+* messageText (필수)
+* selectedRoomId (선택된 경우에만 전송 가능)
 
 ---
 
 ## 5. API 연동
 
 ### 5.1 데이터 출처
-- 도메인: 채팅
-- 담당자: 채팅 담당(또는 공통)
 
-### 5.2 사용 API 목록 (MVP 기준)
-- GET /api/chat/rooms
-- GET /api/chat/rooms/{roomId}/messages?page=&size= (또는 최신 N개)
-- POST /api/chat/rooms/{roomId}/messages
-  - body: { content }
+* 도메인: 채팅
 
-※ 실제 path/파라미터/응답 필드는 API 명세서를 따른다.  
-※ “거래/경매에서 채팅방 생성”은 상세 페이지(P-005/P-008)에서 트리거될 수 있으며, 이 페이지는 생성된 방을 조회해 표시한다.
+### 5.2 사용 API 목록 (OpenAPI)
+
+* GET /api/chat/list
+
+  * 응답: ChatDto[] (roomId를 포함한 메시지 리스트 형태)
+* GET /api/chat/room/{roomId}
+
+  * query params(선택):
+
+    * lastChatId: int
+    * readerName: string
+  * 응답: ChatDto[]
+* POST /api/chat/send
+
+  * body: ChatDto (필수)
+* (참고: 방 생성) POST /api/chat/room
+
+  * query params:
+
+    * itemId: int (필수)
+    * txType: string (필수)
+    * buyerApiKey: string (필수)
+  * 이 페이지에서 “생성”을 직접 트리거하지 않고, 상세 페이지(P-005 등)에서 생성 후 이 페이지가 조회해서 보여주는 구조를 기본으로 둔다.
 
 ### 5.3 API 호출 전략 (새로고침 기반)
-- 채팅방 목록:
-  - 최초 호출: 페이지 진입 시
-  - 재호출: 사용자 수동 새로고침 / 페이지 재진입
-- 메시지 목록:
-  - 최초 호출: 방 선택 시
-  - 재호출 트리거:
-    - 메시지 전송 성공 직후
-    - 사용자 수동 새로고침(RefreshButton)
-    - 방 재선택
-- 메시지 전송:
-  - 호출 시점: SendButton 클릭 또는 Enter
-  - 성공 처리:
-    - 메시지 목록 재조회(권장)
-  - 실패 처리:
-    - 에러 메시지 표시
-    - 입력값 유지
-- credentials: include 필수
-- 캐싱 여부: 없음
-- 실시간 방식: 사용하지 않음 (새로고침/재조회 기반)
+
+* 채팅 목록:
+
+  * 최초 호출: 페이지 진입 시 `GET /api/chat/list`
+  * 성공 처리:
+
+    * chatListRaw 저장
+    * rooms를 roomId 기준으로 파생 생성(각 roomId의 최신 createDate 메시지를 lastMessage로 사용)
+  * 실패 처리:
+
+    * ErrorMessage 표시
+* 메시지 조회:
+
+  * 호출 시점: roomId 선택 시 `GET /api/chat/room/{roomId}`
+  * (선택) lastChatId를 사용해 “더 불러오기/증분 로딩”을 구현할 수 있다(MVP에서는 미사용)
+  * 성공 처리: messages 렌더링
+  * 실패 처리: ErrorMessage 표시
+* 메시지 전송:
+
+  * 호출 시점: SendButton 클릭 또는 Enter
+  * 요청 body(ChatDto):
+
+```json
+{
+  "itemId": 0,
+  "roomId": "string",
+  "sender": "string",
+  "message": "string"
+}
+```
+
+* 성공 처리:
+
+  * `GET /api/chat/room/{roomId}` 재조회(권장)
+  * 입력값(messageText) 초기화
+* 실패 처리:
+
+  * ErrorMessage 표시
+  * 입력값 유지
+* credentials: include
+
+  * 채팅은 Protected 페이지이므로 모든 호출에 포함한다.
+* 캐싱 여부: 없음
+* 실시간 방식: 사용하지 않음
+* 재호출:
+
+  * RefreshButton 클릭 또는 새로고침 시
 
 ---
 
 ## 6. 권한 / 예외 / 에러 처리
 
 ### 6.1 접근 권한
-- 접근 유형: Protected
-- AUTH_GUARD.md 규칙을 따른다.
+
+* 접근 유형: Protected
+* AUTH_GUARD.md 규칙을 따른다.
 
 ### 6.2 예외 케이스
-- 채팅방 0개 → RoomList EmptyState 표시
-- 선택된 roomId가 없는데 메시지 패널 접근:
-  - “채팅방을 선택하세요” 안내 표시
-- 메시지 0개 → MessageList EmptyState 표시
+
+* 목록 0건 → EmptyState 표시
+* selectedRoomId가 없는데 메시지 패널 접근:
+
+  * “채팅방을 선택하세요” 안내 표시
+* 메시지 0건 → MessageList EmptyState 표시
+* 전송 시 selectedRoomId가 null이면 전송 금지
 
 ### 6.3 에러 처리
-- API 실패 메시지는 CONTRACT_API.md 규칙에 따라 표시
-- 목록/메시지 실패는 영역 단위로 처리
-- 네트워크 오류 시 공통 에러 UI 사용(ProtectedLayout 레벨)
+
+* API 실패 메시지는 CONTRACT_API.md 규칙에 따라 표시
+* 목록/메시지 실패는 영역 단위로 처리
+* 네트워크 오류 시 공통 에러 UI 사용(ProtectedLayout 레벨)
 
 ---
 
 ## 7. 완료 조건 체크리스트
-- [ ] 비로그인 사용자는 접근 불가(로그인으로 이동)다
-- [ ] 채팅방 목록이 로드된다
-- [ ] 채팅방 선택 시 메시지 목록이 로드된다
-- [ ] 메시지 전송이 가능하다
-- [ ] 전송 성공 후 메시지 목록이 갱신된다(재조회 또는 로컬 반영)
-- [ ] 새로고침 기반으로 최신 메시지를 다시 가져온다
-- [ ] 에러가 전체 화면을 깨지 않고 영역 단위로 표시된다
+
+* [ ] 비로그인 사용자는 접근 불가(로그인으로 이동)다
+* [ ] 진입 시 채팅 목록이 로드된다
+* [ ] roomId 선택 시 메시지 목록이 로드된다
+* [ ] 메시지 전송이 가능하다
+* [ ] 전송 성공 후 메시지 목록이 갱신된다(재조회)
+* [ ] 새로고침 기반으로 최신 메시지를 다시 가져온다
+* [ ] 에러가 전체 화면을 깨지 않고 영역 단위로 표시된다
